tests/fixtures/guardrails/invalid/route-dynamic-imports-domain/app/routes/products.ts
export async function action() {
  return import("~/domain/billing/entitlement-state.mjs");
}
